# cfd-rs-utils

./: Cargo.toml  README.md  readme.md
output/: test2.vtk  test_0.vtk  test_1.vtk  test_2.vtk  test_3.vtk
src/: boundary.rs  control.rs  error.rs  errors.rs  geometry.rs  indices.rs  lib.rs  mesh.rs
src/mesh/: boundary.rs  cells.rs  computational_mesh.rs  edges.rs  half_edge.rs  neighbor.rs  points.rs  vector.rs  vectors.rs
src/mesh/cells/: triangle.rs
src/mesh/computational_mesh/: indices.rs  manual_meshes.rs
src/mesh/half_edge/: indices.rs  test.rs
