[package]
name = "cfd-rs-utils"
authors = ["Xavier N."]
version = "0.1.0"
edition = "2021"
description = "Utility crate for cfd-rs, includes mostly type system"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
indices = "0.3.6"
itertools = "0.13.0"
nalgebra = { version = "0.33.1", features = ["serde-serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2"
